--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="style.css">
 
-<script src="https://d3js.org/d3.v3.min.js"></script>
+<script src="https://d3js.org/d3.v.min.js"></script>
+<script src="https://d3js.org/colorbrewer.v1.min.js"></script>
+<script src="./index.js"></script>
 
 <body class="w3-light-grey">
     <!-- w3-content defines a container for fixed size centered content, 
@@ -16,7 +18,7 @@ and is wrapped around the whole page content, except for the footer in this exam
 
         <!-- Header -->
         <header class="w3-container w3-center w3-padding-32">
-            <h1><b>Datu vizualizācija</b></h1>
+            <h1><b>Datu vizualizācija test </b></h1>
             <p>Welcome to the test enviromnet for <span class="w3-tag">D3</span></p>
         </header>
 
@@ -33,82 +35,10 @@ and is wrapped around the whole page content, except for the footer in this exam
                         <h5>basic struktūra template lapai <span class="w3-opacity">September 26, 2019</span></h5>
                     </div>
 
-                    <div class="w3-container" id="test">
-                        <script>
-
-                            var margin = { top: 20, right: 20, bottom: 70, left: 40 },
-                                width = 600 - margin.left - margin.right,
-                                height = 300 - margin.top - margin.bottom;
-
-                            // Parse the date / time
-                            var parseDate = d3.time.format("%Y-%m").parse;
-
-                            var x = d3.scale.ordinal().rangeRoundBands([0, width], .05);
-
-                            var y = d3.scale.linear().range([height, 0]);
-
-                            var xAxis = d3.svg.axis()
-                                .scale(x)
-                                .orient("bottom")
-                                .tickFormat(d3.time.format("%Y-%m"));
-
-                            var yAxis = d3.svg.axis()
-                                .scale(y)
-                                .orient("left")
-                                .ticks(10);
-
-                            var svg = d3.select("#test").append("svg")
-                                .attr("width", width + margin.left + margin.right)
-                                .attr("height", height + margin.top + margin.bottom)
-                                .append("g")
-                                .attr("transform",
-                                    "translate(" + margin.left + "," + margin.top + ")");
-
-                            d3.csv("bar-data.csv", function (error, data) {
-
-                                data.forEach(function (d) {
-                                    d.date = parseDate(d.date);
-                                    d.value = +d.value;
-                                });
-
-                                x.domain(data.map(function (d) { return d.date; }));
-                                y.domain([0, d3.max(data, function (d) { return d.value; })]);
-
-                                svg.append("g")
-                                    .attr("class", "x axis")
-                                    .attr("transform", "translate(0," + height + ")")
-                                    .call(xAxis)
-                                    .selectAll("text")
-                                    .style("text-anchor", "end")
-                                    .attr("dx", "-.8em")
-                                    .attr("dy", "-.55em")
-                                    .attr("transform", "rotate(-90)");
-
-                                svg.append("g")
-                                    .attr("class", "y axis")
-                                    .call(yAxis)
-                                    .append("text")
-                                    .attr("transform", "rotate(-90)")
-                                    .attr("y", 6)
-                                    .attr("dy", ".71em")
-                                    .style("text-anchor", "end")
-                                    .text("Value ($)");
-
-                                svg.selectAll("bar")
-                                    .data(data)
-                                    .enter().append("rect")
-                                    .style("fill", "steelblue")
-                                    .attr("x", function (d) { return x(d.date); })
-                                    .attr("width", x.rangeBand())
-                                    .attr("y", function (d) { return y(d.value); })
-                                    .attr("height", function (d) { return height - y(d.value); });
-
-                            });
-                        </script>
-                    </div>
+                    <div class="w3-container" id="test"></div>
+                    <script src="./index.js"></script>
                 </div>
                 <hr>
-                <!-- END BLOG ENTRIES -->
             </div>
 
             <!-- Introduction menu -->
@@ -119,6 +49,8 @@ and is wrapped around the whole page content, except for the footer in this exam
                     <div class="w3-container w3-white">
                         <h4><b>Another Heading</b></h4>
                         <p>Hello</p>
+                        <svg class="bar-chart"></svg>
+                        <script src="./bar-chart.js"></script>
                     </div>
                 </div>
                 <hr>
