Remove source file test

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <link rel="stylesheet" href="style.css">
 
 <script src="https://d3js.org/d3.v.min.js"></script>
-<script src="https://d3js.org/colorbrewer.v1.min.js"></script>
+<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+<script src="https://d3js.org/colorbrewer.v1.min.js" charset="utf-8"></script>
 <script src="./index.js"></script>
 
 <body class="w3-light-grey">
@@ -36,7 +37,7 @@ and is wrapped around the whole page content, except for the footer in this exam
                     </div>
 
                     <div class="w3-container" id="test"></div>
-                    <script src="./index.js">
+                    <script >
                         var margin = { top: 20, right: 20, bottom: 70, left: 40 },
                             width = 600 - margin.left - margin.right,
                             height = 300 - margin.top - margin.bottom;
@@ -118,7 +119,7 @@ and is wrapped around the whole page content, except for the footer in this exam
                         <h4><b>Another Heading</b></h4>
                         <p>Hello</p>
                         <svg class="bar-chart"></svg>
-                        <script src="./bar-chart.js">
+                        <script >
                             var dataset = [80, 120, 140, 30, 50, 190, 70, 12, 170];
 
                             var svgWidth = 500;
